--- a/package.json
+++ b/package.json
@@ -6,25 +6,34 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix --ignore-path .gitignore",
+    "test": "vitest"
   },
   "dependencies": {
     "@mdi/font": "7.2.96",
-    "core-js": "^3.29.0",
+    "axios": "^1.4.0",
+    "core-js": "3.31.0",
+    "moxios": "^0.4.0",
     "roboto-fontface": "*",
-    "vue": "^3.2.0",
-    "vue-router": "^4.0.0",
-    "vuetify": "^3.3.2",
+    "vue": "^3.3.4",
+    "vue-router": "4.2.2",
+    "vuetify": "3.3.5",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "1.6.28"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/test-utils": "^2.4.0",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
     "sass": "^1.60.0",
     "vite": "^4.2.0",
-    "vite-plugin-vuetify": "^1.0.0"
+    "vite-plugin-vuetify": "^1.0.0",
+    "vitest": "^0.32.2",
+    "vue-template-compiler": "^2.7.14"
   }
 }
