--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@mdi/font": "7.2.96",
-    "core-js": "^3.29.0",
+    "core-js": "3.31.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
-    "vue-router": "^4.0.0",
-    "vuetify": "^3.3.2",
+    "vue-router": "4.2.2",
+    "vuetify": "3.3.6",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "1.6.28"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
