--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore",
-    "test": "vitest"
+    "test": "jest"
   },
   "dependencies": {
     "@mdi/font": "7.2.96",
-    "axios": "^1.4.0",
     "core-js": "3.31.0",
-    "moxios": "^0.4.0",
     "roboto-fontface": "*",
     "vue": "^3.3.4",
     "vue-router": "4.2.2",
@@ -23,17 +21,21 @@
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@babel/register": "^7.22.5",
+    "@types/jest": "^27.0.2",
+    "@vitejs/plugin-vue": "^1.9.1",
+    "@vue/compiler-sfc": "^3.3.4",
     "@vue/test-utils": "^2.4.0",
-    "babel-jest": "^29.5.0",
-    "eslint": "^8.37.0",
+    "@vue/vue3-jest": "^29.2.4",
+    "babel-jest": "^27.2.5",
+    "eslint": "^8.44.0",
     "eslint-plugin-vue": "^9.3.0",
+    "jest": "^27.2.5",
+    "jest-environment-jsdom": "^27.2.5",
+    "jest-transform-stub": "^2.0.0",
     "sass": "^1.60.0",
-    "vite": "^4.2.0",
-    "vite-plugin-vuetify": "^1.0.0",
-    "vitest": "^0.32.2",
-    "vue-template-compiler": "^2.7.14"
+    "vite": "^4.3.9",
+    "vite-plugin-vuetify": "^1.0.0"
   }
 }
